--- a/thesis/gradu2.tex
+++ b/thesis/gradu2.tex
@@ -9,6 +9,9 @@
 
 \usepackage{booktabs} % good for beautiful tables
 
+% TODO remove todo
+\usepackage{todonotes}
+
 % NOTE: This must be the last \usepackage in the whole document!
 \usepackage[bookmarksopen,bookmarksnumbered,linktocpage]{hyperref}
 
