--- a/thesis/gradu2.bib
+++ b/thesis/gradu2.bib
@@ -55,7 +55,7 @@
   urldate = {2023-01-17},
   abstract = {DevOps is a trend towards a tighter integration between development (Dev) and operations (Ops) teams. The need for such an integration is driven by the requirement to continuously adapt enterprise applications (EAs) to changes in the business environment. As of today, DevOps concepts have been primarily introduced to ensure a constant flow of features and bug fixes into new releases from a functional perspective. In order to integrate a non-functional perspective into these DevOps concepts this report focuses on tools, activities, and processes to ensure one of the most important quality attributes of a software system, namely performance. Performance describes system properties concerning its timeliness and use of resources. Common metrics are response time, throughput, and resource utilization. Performance goals for EAs are typically defined by setting upper and/or lower bounds for these metrics and specific business transactions. In order to ensure that such performance goals can be met, several activities are required during development and operation of these systems as well as during the transition from Dev to Ops. Activities during development are typically summarized by the term Software Performance Engineering (SPE), whereas activities during operations are called Application Performance Management (APM). SPE and APM were historically tackled independently from each other, but the newly emerging DevOps concepts require and enable a tighter integration between both activity streams. This report presents existing solutions to support this integration as well as open research challenges in this area.},
   pubstate = {preprint},
-  keywords = {\_tablet,Computer Science - Performance,Computer Science - Software Engineering},
+  keywords = {Computer Science - Performance,Computer Science - Software Engineering},
   file = {/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/9MDJPVS9/Brunnert et al_2015_Performance-oriented DevOps.pdf;/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/3DKEU57U/1508.html}
 }
 
@@ -155,6 +155,19 @@
   urldate = {2023-03-14},
   abstract = {Tapping into the "folk knowledge" needed to advance machine learning applications.},
   file = {/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/J2LSZY59/Domingos_2012_A few useful things to know about machine learning.pdf}
+}
+
+@inproceedings{eistySurveySoftwareMetric2018,
+  title = {A {{Survey}} of {{Software Metric Use}} in {{Research Software Development}}},
+  booktitle = {2018 {{IEEE}} 14th {{International Conference}} on E-{{Science}} (e-{{Science}})},
+  author = {Eisty, Nasir U. and Thiruvathukal, George K. and Carver, Jeffrey C.},
+  date = {2018-10},
+  pages = {212--222},
+  doi = {10.1109/eScience.2018.00036},
+  abstract = {Background: Breakthroughs in research increasingly depend on complex software libraries, tools, and applications aimed at supporting specific science, engineering, business, or humanities disciplines. The complexity and criticality of this software motivate the need for ensuring quality and reliability. Software metrics are a key tool for assessing, measuring, and understanding software quality and reliability. Aims: The goal of this work is to better understand how research software developers use traditional software engineering concepts, like metrics, to support and evaluate both the software and the software development process. One key aspect of this goal is to identify how the set of metrics relevant to research software corresponds to the metrics commonly used in traditional software engineering. Method: We surveyed research software developers to gather information about their knowledge and use of code metrics and software process metrics. We also analyzed the influence of demographics (project size, development role, and development stage) on these metrics. Results: The survey results, from 129 respondents, indicate that respondents have a general knowledge of metrics. However, their knowledge of specific SE metrics is lacking, their use even more limited. The most used metrics relate to performance and testing. Even though code complexity often poses a significant challenge to research software development, respondents did not indicate much use of code metrics. Conclusions: Research software developers appear to be interested and see some value in software metrics but may be encountering roadblocks when trying to use them. Further study is needed to determine the extent to which these metrics could provide value in continuous process improvement.},
+  eventtitle = {2018 {{IEEE}} 14th {{International Conference}} on E-{{Science}} (e-{{Science}})},
+  keywords = {Complexity theory,Software,Software engineering,Software metrics,{Survey, Software Metrics, Software Engineering, Research Software},Tools},
+  file = {/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/9BLC6WCD/Eisty et al_2018_A Survey of Software Metric Use in Research Software Development.pdf;/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/QQIXAFZM/8588655.html}
 }
 
 @inproceedings{fayyadKnowledgeDiscoveryData1996,
@@ -447,7 +460,7 @@
   urldate = {2023-01-17},
   abstract = {Quality pressure is one of the factors affecting processes for software development in its various stages. DevOps is one of the proposed solutions to such pressure. The primary focus of DevOps is to increase the deployment speed, frequency and quality. DevOps is a mixture of different developments and operations to its multitudinous ramifications in software development industries, DevOps have attracted the interest of many researchers. There are considerable literature surveys on this critical innovation in software development, yet, little attention has been given to DevOps impact on software quality. This research is aimed at analyzing the implications of DevOps features on software quality. DevOps can also be referred to a change in organization cultures aimed at removal of gaps between the development and operations of an organization. The adoption of DevOps in an organization provides many benefits including quality but also brings challenges to an organization. This study presents systematic mapping of the impact of DevOps on software quality. The results of this study provide a better understanding of DevOps on software quality for both professionals and researchers working in this area. The study shows research was mainly focused in automation, culture, continuous delivery, fast feedback of DevOps. There is need of further research in many areas of DevOps (for instance: measurement, development of metrics of different stages to assess its performance, culture, practices toward ensuring quality assurance, and quality factors such as usability, efficiency, software maintainability and portability).},
   langid = {english},
-  keywords = {\_tablet,Automation,Development,DevOps,Measurement,Operations,Software,Software quality,Systematic mapping},
+  keywords = {Automation,Development,DevOps,Measurement,Operations,Software,Software quality,Systematic mapping},
   file = {/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/FI2BPQCJ/Mishra_Otaiwi_2020_DevOps and software quality.pdf;/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/NTDWUG9S/S1574013720304081.html}
 }
 
@@ -509,7 +522,7 @@
   doi = {10.1109/ICTER.2017.8257807},
   abstract = {DevOps is extended from certain agile practices with a mix of patterns intended to improve collaboration between development and operation teams. The main purpose of this paper is to conduct a study on how DevOps practice has impacted to software quality. The secondary objective is to find how to improve quality efficiently. A literature survey has carried out to explore about current DevOps practices in industry. According to the literature survey, the conceptual research model was developed and five hypotheses were derived. Research objectives were accomplished by testing hypotheses using Pearson correlation. A linear model is derived based on the linear regression analysis. An online questionnaire was used to collect quantitative data whereas interviews with experts on DevOps and Quality assurance have been used to identify how to improve the quality of software by practicing DevOps. Recommendations are given based on interview feedback, hypotheses testing with regression analysis. According to the quantitative study, researchers have identified that quality of the software gets improved when practice DevOps by following CAMS (Culture, Automation, Measurement, Sharing) framework. Automation is the most critical factor to improve the software quality. As per the results of multiple regression analysis, it has proved culture, automation, measurement and sharing are important factors to consider to improve quality of the software. In conclusion it can be recommended to use DevOps to achieve high quality software.},
   eventtitle = {2017 {{Seventeenth International Conference}} on {{Advances}} in {{ICT}} for {{Emerging Regions}} ({{ICTer}})},
-  keywords = {\_tablet,Automation,CAMS Framework,Companies,DevOps,ISO 9126,Quality,Software measurement,Software quality,Testing},
+  keywords = {Automation,CAMS Framework,Companies,DevOps,ISO 9126,Quality,Software measurement,Software quality,Testing},
   file = {/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/D8E3C6NR/Perera et al_2017_Improve software quality through practicing DevOps.pdf;/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/URNWQ29A/8257807.html}
 }
 
@@ -618,7 +631,7 @@
   abstract = {As the interest in DevOps continues to grow, there is an increasing need for software organizations to understand how to adopt it successfully. This study has as objective to clarify the concept and provide insight into existing challenges of adopting DevOps. First, the existing literature is reviewed. A definition of DevOps is then formed based on the literature by breaking down the concept into its defining characteristics. We interview 13 subjects in a software company adopting DevOps and, finally, we present 11 impediments for the company’s DevOps adoption that were identified based on the interviews.},
   isbn = {978-3-319-18612-2},
   langid = {english},
-  keywords = {\_tablet,Cloud Service,Continuous Delivery,Cultural Aspect,Service Failure,Software Process Improvement},
+  keywords = {Cloud Service,Continuous Delivery,Cultural Aspect,Service Failure,Software Process Improvement},
   file = {/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/TGE2W5BX/Smeds et al_2015_DevOps.pdf}
 }
 
@@ -699,7 +712,7 @@
   url = {https://doi.org/10.1145/2735399.2735416},
   urldate = {2023-01-17},
   abstract = {The DevOps movement intends to improve communication, collaboration, and integration between software developers (Dev) and IT operations professionals (Ops). Automation of software quality assurance is key to DevOps success. We present how automated performance benchmarks may be included into continuous integration. As an example, we report on regression benchmarks for application monitoring frameworks and illustrate the inclusion of automated benchmarks into continuous integration setups.},
-  keywords = {\_tablet,Jenkins,Kieker,MooBench},
+  keywords = {Jenkins,Kieker,MooBench},
   file = {/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/L5MUF3HG/Waller et al_2015_Including Performance Benchmarks into Continuous Integration to Enable DevOps.pdf}
 }
 
