--- a/thesis/gradu2.bib
+++ b/thesis/gradu2.bib
@@ -31,7 +31,6 @@
   booktitle = {Proceedings of {{IEEE Big Data}}},
   author = {Breck, Eric and Cai, Shanqing and Nielsen, Eric and Salib, Michael and Sculley, D.},
   date = {2017},
-  keywords = {\_tablet},
   file = {/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/LEKCIDWU/Breck et al_2017_The ML Test Score.pdf}
 }
 
@@ -590,6 +589,19 @@
   pubstate = {preprint},
   keywords = {Computer Science - Computer Vision and Pattern Recognition},
   file = {/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/I5XNBHGL/Rombach et al_2022_High-Resolution Image Synthesis with Latent Diffusion Models.pdf;/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/XS89TD75/Rombach et al. - 2022 - High-Resolution Image Synthesis with Latent Diffus.pdf;/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/4Y2J95DE/2112.html}
+}
+
+@inproceedings{sculleyHiddenTechnicalDebt2015a,
+  title = {Hidden {{Technical Debt}} in {{Machine Learning Systems}}},
+  booktitle = {Advances in {{Neural Information Processing Systems}}},
+  author = {Sculley, D. and Holt, Gary and Golovin, Daniel and Davydov, Eugene and Phillips, Todd and Ebner, Dietmar and Chaudhary, Vinay and Young, Michael and Crespo, Jean-François and Dennison, Dan},
+  date = {2015},
+  volume = {28},
+  publisher = {{Curran Associates, Inc.}},
+  url = {https://proceedings.neurips.cc/paper_files/paper/2015/hash/86df7dcfd896fcaf2674f757a2463eba-Abstract.html},
+  urldate = {2023-08-13},
+  abstract = {Machine learning offers a fantastically powerful toolkit for building useful complexprediction systems quickly. This paper argues it is dangerous to think ofthese quick wins as coming for free. Using the software engineering frameworkof technical debt, we find it is common to incur massive ongoing maintenancecosts in real-world ML systems. We explore several ML-specific risk factors toaccount for in system design. These include boundary erosion, entanglement,hidden feedback loops, undeclared consumers, data dependencies, configurationissues, changes in the external world, and a variety of system-level anti-patterns.},
+  file = {/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/XDLRWE7U/Sculley et al_2015_Hidden Technical Debt in Machine Learning Systems.pdf}
 }
 
 @online{shankarOperationalizingMachineLearning2022,
