--- a/thesis/gradu2.bib
+++ b/thesis/gradu2.bib
@@ -21,7 +21,7 @@
   urldate = {2023-01-25},
   abstract = {Methods for neural network hyperparameter optimization and meta-modeling are computationally expensive due to the need to train a large number of model configurations. In this paper, we show that standard frequentist regression models can predict the final performance of partially trained model configurations using features based on network architectures, hyperparameters, and time-series validation performance data. We empirically show that our performance prediction models are much more effective than prominent Bayesian counterparts, are simpler to implement, and are faster to train. Our models can predict final performance in both visual classification and language modeling domains, are effective for predicting performance of drastically varying model architectures, and can even generalize between model classes. Using these prediction models, we also propose an early stopping method for hyperparameter optimization and meta-modeling, which obtains a speedup of a factor up to 6x in both hyperparameter optimization and meta-modeling. Finally, we empirically show that our early stopping method can be seamlessly incorporated into both reinforcement learning-based architecture selection algorithms and bandit based search methods. Through extensive experimentation, we empirically show our performance prediction models and early stopping algorithm are state-of-the-art in terms of prediction accuracy and speedup achieved while still identifying the optimal model configurations.},
   pubstate = {preprint},
-  keywords = {\_tablet,Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing},
+  keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing},
   file = {/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/I93LMDHA/Baker et al_2017_Accelerating Neural Architecture Search using Performance Prediction.pdf;/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/IWHABXLB/1705.html}
 }
 
@@ -273,6 +273,21 @@
   pubstate = {preprint},
   keywords = {\_tablet,Computer Science - Artificial Intelligence,Computer Science - Machine Learning},
   file = {/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/PWERNVYQ/Imbrea_2021_Automated Machine Learning Techniques for Data Streams.pdf;/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/ER4UAF2R/2106.html}
+}
+
+@book{kounevSystemsBenchmarkingScientists2020,
+  title = {Systems {{Benchmarking}}: {{For Scientists}} and {{Engineers}}},
+  shorttitle = {Systems {{Benchmarking}}},
+  author = {Kounev, Samuel and Lange, Klaus-Dieter and Von Kistowski, Jóakim},
+  date = {2020},
+  publisher = {{Springer International Publishing}},
+  location = {{Cham}},
+  doi = {10.1007/978-3-030-41705-5},
+  url = {https://link.springer.com/10.1007/978-3-030-41705-5},
+  urldate = {2023-08-23},
+  isbn = {978-3-030-41704-8 978-3-030-41705-5},
+  langid = {english},
+  file = {/Users/al/Library/CloudStorage/OneDrive-Personal/Apps/Zotero/storage/4KUA98VS/Kounev et al_2020_Systems Benchmarking.pdf}
 }
 
 @article{kreuzbergerMachineLearningOperations2023,
